--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,7 @@ steps:
   args: ['build', '-t', 'gcr.io/kevin-awesome-project/kevin-awesome-project:$SHORT_SHA', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/kevin-awesome-project/kevin-awesome-project:$SHORT_SHA']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['beta', 'run', 'deploy', 'kevin-awesome-project', '--region=europe-west1', '--platform=managed', '--image=gcr.io/kevin-awesome-project/kevin-awesome-project:$SHORT_SHA']
+  
+
